[tool.poetry]
name = "agora-backend"
version = "0.1.0"
description = ""
authors = ["Ted Moseley <tmoseley1106@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.6.2"
aiohttp_cors = "^0.7.0"
asyncpg = "^0.20.1"
Authlib = "^0.14.1"
click = "^7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
pytest-aiohttp = "^0.3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
